@@ -2,15 +2,13 @@
 import os.path
 from tarfile import open as opentar
 
-from google_drive_downloader import GoogleDriveDownloader as gdd
+import gdown as gdd
 
 # download MBH
 if not os.path.exists("tutorial/data/mbh"):
-    gdd.download_file_from_google_drive(
-        file_id="1iL071Fi5MxHle0CLOqg3JkZIgjQF8EwF",
-        dest_path="tutorial/data/MBHDemo.tar",
-        showsize=True,
-    )
+    url = "https://drive.google.com/file/d/1Rr3pEF2BA2oRfs23FDIgMgoutxTq1qOR/view?usp=share_link"  # noqa: E501
+    output_path = "tutorial/data/MBHDemo.tar"
+    gdd.download(url, output_path, quiet=False, fuzzy=True)
     with opentar("tutorial/data/MBHDemo.tar", "r") as tar:
         tar.extractall(
             "tutorial/data/mbh"
@@ -21,11 +19,9 @@ if not os.path.exists("tutorial/data/mbh"):
 # download UCB
 if not os.path.exists("tutorial/data/ucb"):
     # 06 mo
-    gdd.download_file_from_google_drive(
-        file_id="14ZgAU_67ZzxTJyaScUH_i22nSkpNOp36",
-        dest_path="tutorial/data/UCBDemo_06.tar",
-        showsize=True,
-    )
+    url = "https://drive.google.com/file/d/1z4M2cZnF5mPsS6ppNsHtceqXfR9Liz99/view?usp=share_link"  # noqa: E501
+    output_path = "tutorial/data/UCBDemo_06.tar"
+    gdd.download(url, output_path, quiet=False, fuzzy=True)
     with opentar("tutorial/data/UCBDemo_06.tar", "r") as tar:
         tar.extractall(
             "tutorial/data/ucb"
@@ -33,11 +29,9 @@ if not os.path.exists("tutorial/data/ucb"):
     os.remove("tutorial/data/UCBDemo_06.tar")
 
     # 03 mo
-    gdd.download_file_from_google_drive(
-        file_id="1Rbx8PTLHCOHdakGok8DM2pVDzdPXsuUp",
-        dest_path="tutorial/data/UCBDemo_03.tar",
-        showsize=True,
-    )
+    url = "https://drive.google.com/file/d/1XGYUETwupZe8AiEDd4OMAIzA7kukDh5e/view?usp=share_link"  # noqa: E501
+    output_path = "tutorial/data/UCBDemo_03.tar"
+    gdd.download(url, output_path, quiet=False, fuzzy=True)
     with opentar("tutorial/data/UCBDemo_03.tar", "r") as tar:
         tar.extractall(
             "tutorial/data/ucb"
