@@ -1,4 +1,14 @@
-### Fix the python version for black and wrong flake8 URL in precommit (HEAD -> main)
+### Fixes https://github.com/tlittenberg/lisacattools/issues/14 (HEAD -> main)
+>Thu, 12 Jan 2023 22:07:26 +0100
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix the python version for black and wrong flake8 URL in precommit
 >Thu, 12 Jan 2023 22:01:14 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
